[project]
name = "git-repo-jumper"
version = "0.1.0"
dependencies = [
    "InquirerPy>=0.3.4",
    "PyYAML>=6.0.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.setuptools]
packages = ["git_repo_jumper"]

[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]

[project.scripts]
rjump = "git_repo_jumper.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
